build_output.log

> ArisuTalk@1.0.0 build:fe /app
> pnpm --filter frontend run build


> frontend@1.0.0 build /app/frontend
> vite build

vite v7.2.1 building client environment for production...
transforming...
3:10:04 PM [vite-plugin-svelte] src/lib/components/modals/debug/DataBrowserModal.svelte:200:24 A form label must be associated with a control
https://svelte.dev/e/a11y_label_has_associated_control
198:                     <!-- Store Selector -->
199:                     <div class="flex-1">
200:                         <label
                                   ^
201:                             class="block text-sm font-medium text-gray-300 mb-2"
202:                         >
3:10:04 PM [vite-plugin-svelte] src/lib/components/modals/debug/DataBrowserModal.svelte:224:24 A form label must be associated with a control
https://svelte.dev/e/a11y_label_has_associated_control
222:                     <!-- Search -->
223:                     <div class="flex-1">
224:                         <label
                                   ^
225:                             class="block text-sm font-medium text-gray-300 mb-2"
226:                         >
3:10:05 PM [vite-plugin-svelte] src/lib/components/auth/AuthWidget.svelte:160:4 Unused CSS selector ".auth-widget__status"
https://svelte.dev/e/css_unused_selector
158:     }
159:
160:     .auth-widget__status {
                             ^
161:         font-size: 0.75rem;
162:         color: rgb(148, 163, 184);
3:10:05 PM [vite-plugin-svelte] src/lib/components/auth/AuthWidget.svelte:165:4 Unused CSS selector ".auth-widget__disabled"
https://svelte.dev/e/css_unused_selector
163:     }
164:
165:     .auth-widget__disabled {
                               ^
166:         display: inline-flex;
167:         flex-direction: column;
3:10:05 PM [vite-plugin-svelte] src/lib/components/auth/AuthWidget.svelte:173:4 Unused CSS selector ".auth-widget__hint"
https://svelte.dev/e/css_unused_selector
171:     }
172:
173:     .auth-widget__hint {
                           ^
174:         font-size: 0.7rem;
175:         max-width: 16rem;
src/lib/api/novelai.ts(9,18): error TS7016: Could not find a declaration file for module 'pako'. '/app/node_modules/.pnpm/pako@2.1.0/node_modules/pako/dist/pako.esm.mjs' implicitly has an 'any' type.
  Try `npm i --save-dev @types/pako` if it exists or add a new declaration (.d.ts) file containing `declare module 'pako';`
src/lib/services/chatService.ts(47,29): error TS2304: Cannot find name 'Message'.
src/lib/services/chatService.ts(63,27): error TS2304: Cannot find name 'Message'.
src/lib/services/chatService.ts(186,14): error TS2304: Cannot find name 'Message'.
src/lib/services/chatService.ts(341,29): error TS2304: Cannot find name 'Message'.
src/lib/services/chatService.ts(377,24): error TS2304: Cannot find name 'Message'.
src/lib/services/chatService.ts(547,17): error TS2345: Argument of type 'import("/app/frontend/src/types/chat").Message[]' is not assignable to parameter of type 'Message[]'.
  Type 'import("/app/frontend/src/types/chat").Message' is not assignable to type 'Message'.
    Types of property 'id' are incompatible.
      Type 'string | number' is not assignable to type 'number'.
        Type 'string' is not assignable to type 'number'.
src/lib/services/chatService.ts(586,9): error TS2345: Argument of type 'import("/app/frontend/src/types/chat").Message[]' is not assignable to parameter of type 'Message[]'.
  Type 'import("/app/frontend/src/types/chat").Message' is not assignable to type 'Message'.
    Types of property 'id' are incompatible.
      Type 'string | number' is not assignable to type 'number'.
        Type 'string' is not assignable to type 'number'.
src/lib/services/chatService.ts(595,26): error TS2304: Cannot find name 'Message'.
src/lib/services/chatService.ts(653,9): error TS2345: Argument of type 'import("/app/frontend/src/types/chat").Message[]' is not assignable to parameter of type 'Message[]'.
  Type 'import("/app/frontend/src/types/chat").Message' is not assignable to type 'Message'.
    Types of property 'id' are incompatible.
      Type 'string | number' is not assignable to type 'number'.
        Type 'string' is not assignable to type 'number'.
src/lib/services/chatService.ts(892,26): error TS2304: Cannot find name 'Message'.
src/lib/services/openChatService.ts(60,18): error TS7006: Parameter 'id' implicitly has an 'any' type.
src/lib/services/openChatService.ts(92,43): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'string'.
  Type 'number' is not assignable to type 'string'.
src/lib/utils/crypto.ts(28,13): error TS2322: Type 'Uint8Array<ArrayBufferLike>' is not assignable to type 'BufferSource'.
  Type 'Uint8Array<ArrayBufferLike>' is not assignable to type 'ArrayBufferView<ArrayBuffer>'.
    Types of property 'buffer' are incompatible.
      Type 'ArrayBufferLike' is not assignable to type 'ArrayBuffer'.
        Type 'SharedArrayBuffer' is missing the following properties from type 'ArrayBuffer': resizable, resize, detached, transfer, transferToFixedLength
src/lib/utils/crypto.ts(70,32): error TS2322: Type 'Uint8Array<ArrayBufferLike>' is not assignable to type 'BufferSource'.
  Type 'Uint8Array<ArrayBufferLike>' is not assignable to type 'ArrayBufferView<ArrayBuffer>'.
    Types of property 'buffer' are incompatible.
      Type 'ArrayBufferLike' is not assignable to type 'ArrayBuffer'.
        Type 'SharedArrayBuffer' is missing the following properties from type 'ArrayBuffer': resizable, resize, detached, transfer, transferToFixedLength
src/lib/utils/worker/replace.ts(4,40): error TS6305: Output file '/app/frontend/dist/worker/regex/main.d.ts' has not been built from source file '/app/frontend/worker/regex/main.ts'.
src/prompts/builder/promptBuilder.ts(283,47): error TS2322: Type '({ text: string; } | { inlineData: { mimeType: string; data: string; }; })[]' is not assignable to type '{ text: string; }[]'.
  Type '{ text: string; } | { inlineData: { mimeType: string; data: string; }; }' is not assignable to type '{ text: string; }'.
    Property 'text' is missing in type '{ inlineData: { mimeType: string; data: string; }; }' but required in type '{ text: string; }'.
src/prompts/promptManager.ts(29,16): error TS2554: Expected 2 arguments, but got 1.
src/prompts/promptManager.ts(55,16): error TS2554: Expected 2 arguments, but got 1.
src/prompts/promptManager.ts(56,5): error TS7053: Element implicitly has an 'any' type because expression of type 'PromptType' can't be used to index type '{}'.
  Property 'mainChat' does not exist on type '{}'.
src/prompts/promptManager.ts(68,16): error TS2554: Expected 2 arguments, but got 1.
src/prompts/promptManager.ts(79,16): error TS2554: Expected 2 arguments, but got 1.
src/prompts/promptManager.ts(80,12): error TS7053: Element implicitly has an 'any' type because expression of type 'PromptType' can't be used to index type '{}'.
  Property 'mainChat' does not exist on type '{}'.
/app/frontend:
 ERR_PNPM_RECURSIVE_RUN_FIRST_FAIL  frontend@1.0.0 build: `vite build`
Exit status 1
 ELIFECYCLE  Command failed with exit code 1.
